--- a/app/views/words/_filters.html.erb
+++ b/app/views/words/_filters.html.erb
@@ -45,4 +45,13 @@
       </span>
     <% end %>
   <% end %>
+  <span class="light-gray">
+    <small>
+      <% if @matching_words_count == 1 %>
+        (1 word matches)
+      <% else %>
+        (<%= @matching_words_count %> words match)
+      <% end %>
+    </small>
+  </span>
 </div>
