--- a/app/views/words/_skeleton_word.html.erb
+++ b/app/views/words/_skeleton_word.html.erb
@@ -11,9 +11,9 @@
       <%= heroicon "pencil-alt", variant: :outline %>
     </a>
   </div>
-  <div class="cards-created">
+  <div class="checked-off">
     <button disabled>
-      <span title="No cards created yet">
+      <span title="Not checked off yet">
         <%= heroicon "plus", variant: :outline, options: { class: "unchecked" } %>
       </span>
     </button>
