--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -164,14 +164,14 @@
   &.hidden { display: none; }
 
   &.hide-modify-buttons {
-    .edit, .delete, .cards-created {
+    .edit, .delete, .checked-off {
       display: none;
     }
   }
 
   .delete button,
   .edit a,
-  .cards-created button {
+  .checked-off button {
     background: none;
     border: none;
     float: right;
@@ -415,7 +415,7 @@
 }
 
 .skeleton-word {
-  .delete, .edit, .cards-created {
+  .delete, .edit, .checked-off {
     svg {
       user-select: none;
       cursor: default !important;
