--- a/app/views/words/export.html.erb
+++ b/app/views/words/export.html.erb
@@ -2,7 +2,7 @@
   <h1 class="page-title">Export your word list</h1>
 
   <p>
-    Download a CSV of your word list for data backup or to use in another study tool. Choose to export all words you have created, or just the words marked as "cards not created."
+    Download a CSV of your word list for data backup or to use in another study tool. Choose to export all words you have created, or just the words that have not been checked off yet.
   </p>
 
   <div class="actions">
@@ -10,9 +10,9 @@
       <%= heroicon "document-download", variant: :outline, options: { class: "download-icon" } %>
       All words
     <% end %>
-    <%= link_to(download_words_path(@current_user, format: :csv, filter: "cards_not_created"), target: "_blank", rel: "noopener noreferrer", class: "button-blue export-button") do %>
+    <%= link_to(download_words_path(@current_user, format: :csv, filter: "not_checked_off"), target: "_blank", rel: "noopener noreferrer", class: "button-blue export-button") do %>
       <%= heroicon "document-download", variant: :outline, options: { class: "download-icon" } %>
-      Words without cards
+      Words not checked off
     <% end %>
   </div>
 </div>
