--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,6 +1,6 @@
 <div class="words-list-page">
   <h1 class="page-title">
-    <%= link_to "Words", words_path(@resource_owner), class: "home-link" %>
+    <%= link_to "Words", words_path(@resource_owner), class: "home-link", title: "Click to disable all filters" %>
     <%= link_to(word_list_instructions_path, title: "What does this feature do?") do %>
       <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
     <% end %>
