--- a/app/views/words/import.html.erb
+++ b/app/views/words/import.html.erb
@@ -10,10 +10,11 @@
     <li>[1]<strong>Japanese word or phrase</strong></li>
     <li>[2]Source name (i.e. Minna no Nihongo)</li>
     <li>[3]Source reference (i.e. Chapter 12)</li>
-    <li>[4]Checked off (true/false)</li>
-    <li>[5]Checked off on (mm/dd/yyyy)</li>
-    <li>[6]Added to list on (mm/dd/yyyy)</li>
-    <li>[7]Note</li>
+    <li>[4]Starred (true/false)</li>
+    <li>[5]Checked off (true/false)</li>
+    <li>[6]Checked off on (mm/dd/yyyy)</li>
+    <li>[7]Added to list on (mm/dd/yyyy)</li>
+    <li>[8]Note</li>
   </ul>
 
   <%= form_tag(upload_words_path(@current_user), method: :post, multipart: true, class: "import-csv-form") do %>
