--- a/app/views/words/export.html.erb
+++ b/app/views/words/export.html.erb
@@ -10,9 +10,9 @@
       <%= heroicon "document-download", variant: :outline, options: { class: "download-icon" } %>
       All words
     <% end %>
-    <%= link_to(download_words_path(@current_user, format: :csv, filter: "not_checked_off"), target: "_blank", rel: "noopener noreferrer", class: "button-blue export-button") do %>
+    <%= link_to(download_words_path(@current_user, format: :csv, checked: "false"), target: "_blank", rel: "noopener noreferrer", class: "button-blue export-button") do %>
       <%= heroicon "document-download", variant: :outline, options: { class: "download-icon" } %>
-      Words not checked off
+      Words not checked
     <% end %>
   </div>
 </div>
