--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -3,7 +3,7 @@
     class="word hide-modify-buttons"
     data-controller="word"
     data-word-word-id-value="<%= word.id %>"
-    data-word-checked-off-value="<%= word.checked_off? %>"
+    data-word-checked-value="<%= word.checked? %>"
     data-word-starred-value="<%= word.starred? %>"
     data-word-japanese-word-value="<%= word.japanese %>"
     data-word-english-word-value="<%= word.english %>"
@@ -46,8 +46,8 @@
       <% end %>
     </div>
     <div class="checked-off">
-      <%= button_to(word_toggle_checked_off_path(@resource_owner, word), method: :post, data: { controller: "disable", disable_with_value: "<div class=\"loader\"></div>", action: "disable#disableButton", disable_target: "button" }) do %>
-        <% if word.checked_off? %>
+      <%= button_to(word_toggle_checked_path(@resource_owner, word), method: :post, data: { controller: "disable", disable_with_value: "<div class=\"loader\"></div>", action: "disable#disableButton", disable_target: "button" }) do %>
+        <% if word.checked? %>
           <span title="Checked off">
             <%= heroicon "check", options: { class: "checked" } %>
           </span>
