Catching some stray checked off refrences

--- a/app/views/users/stats.html.erb
+++ b/app/views/users/stats.html.erb
@@ -59,11 +59,11 @@
       <div class="stats-card">
         <h4 class="catagory-subtitle">Totals:</h4>
         <p>
-          <span class="light-gray">Not checked off:</span>
+          <span class="light-gray">Not checked:</span>
           <%= @words_not_checked_count %>
         </p>
         <p>
-          <span class="light-gray">Checked off:</span>
+          <span class="light-gray">Checked:</span>
           <%= @checked_words_count %>
         </p>
         <p>
