--- a/app/views/words/import.html.erb
+++ b/app/views/words/import.html.erb
@@ -11,8 +11,8 @@
     <li>[2]Source name (i.e. Minna no Nihongo)</li>
     <li>[3]Source reference (i.e. Chapter 12)</li>
     <li>[4]Starred (true/false)</li>
-    <li>[5]Checked off (true/false)</li>
-    <li>[6]Checked off on (mm/dd/yyyy)</li>
+    <li>[5]Checked (true/false)</li>
+    <li>[6]Checked on (mm/dd/yyyy)</li>
     <li>[7]Added to list on (mm/dd/yyyy)</li>
     <li>[8]Note</li>
   </ul>
