Use a check instead of a plus icon

--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -53,7 +53,7 @@
           </span>
         <% else %>
           <span title="Not checked off yet">
-            <%= heroicon "plus", variant: :outline, options: { class: "unchecked" } %>
+            <%= heroicon "check", options: { class: "unchecked" } %>
           </span>
         <% end %>
       <% end %>
