Try 'new only' instead of 'unchecked'

--- a/app/views/words/_filters.html.erb
+++ b/app/views/words/_filters.html.erb
@@ -32,16 +32,16 @@
   <% end %>
   <% if params[:checked] == "false" %>
     <%= link_to words_path(@resource_owner, filter_params_minus(:checked)), title: "Only showing words that are not checked, click to disable filter", class: "filter-on" do %>
-      <%= heroicon "check" %>
+      <%= heroicon "sparkles" %>
       <span class="filter-description">
-        Unchecked
+        New only
       </span>
     <% end %>
   <% else %>
     <%= link_to words_path(@resource_owner, filter_params_plus(checked: "false")), title: "No filter applied, click to only show words that have not been checked", class: "filter-off" do %>
-      <%= heroicon "check" %>
+      <%= heroicon "sparkles", variant: :outline %>
       <span class="filter-description">
-        Unchecked
+        New only
       </span>
     <% end %>
   <% end %>
