Don't hide and show modifier buttons for now
- the public word list feature may never ship
- missing cookies caused issues in mobile safari and suggest there may be a better approach

--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -1,6 +1,6 @@
 <%= turbo_frame_tag dom_id(word) do %>
   <div
-    class="word hide-modify-buttons"
+    class="word" <%# add `hide-modify-buttons` class to hide by default and re-enable in JS in app/javascript/controllers/word_controller.js %>
     data-controller="word"
     data-word-word-id-value="<%= word.id %>"
     data-word-checked-value="<%= word.checked? %>"
