--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -165,6 +165,36 @@
   }
 }
 
+.kanji-finder-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  .head-explanation {
+    font-size: 0.9em;
+    margin: -12px 0px 8px 0px;
+  }
+  .kanji-finder-form {
+    max-width: 400px;
+    width: 100%;
+    textarea {
+      font-size: 1.1em;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+      padding: 12px;
+      height: 12px;
+      font-family: 'Roboto', Arial, Helvetica, sans-serif;
+      height: auto; // required to make html row setting work
+      width: calc(100% - 26px);
+      &:focus {
+        outline-color: #3B82F6;
+      }
+    }
+    input[type="submit"] {
+      margin-top: 10px;
+    }
+  }
+}
+
 .kanji-wall-page {
   .page-title {
     text-align: center;
