--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -33,7 +33,7 @@
 
   <div class="actions">
     <% if @current_user&.can_modify_resources_belonging_to?(@resource_owner) %>
-      <%= button_to(delete_kanji_path(@resource_owner, @previous_kanji || 0), class: "basic-button", method: :delete, title: "Remove the last kanji that was #{@previous_kanji&.status == Kanji::SKIPPED_STATUS ? "skipped" : "added"}", data: { controller: "disable", disable_with_value: "Undoing...", action: "disable#disableButton", disable_target: "button" }, disabled: @previous_kanji.nil?) do %>
+      <%= button_to(update_kanji_path(@resource_owner, @previous_kanji || 0), class: "basic-button", method: :patch, params: { kanji: { status: Kanji::NEW_STATUS } }, title: "Undo the last kanji that was #{@previous_kanji&.status == Kanji::SKIPPED_STATUS ? "skipped" : "added"}", data: { controller: "disable", disable_with_value: "Undoing...", action: "disable#disableButton", disable_target: "button" }, disabled: @previous_kanji.nil?) do %>
         <%= heroicon "rewind", options: { class: "back-button-icon" } %>
         Undo
       <% end %>
