Add initial settings dropdown on next kanji page

--- a/app/views/kanji/finder.html.erb
+++ b/app/views/kanji/finder.html.erb
@@ -12,7 +12,7 @@
       </div>
 
       <div class="actions">
-        <%= submit_tag "Find kanji", class: "button-blue", data: { controller: "disable", disable_with_value: "Finding kanji...", action: "disable#disableButton", disable_target: "button" } %>
+        <%= submit_tag "Find and add kanji", class: "button-blue", data: { controller: "disable", disable_with_value: "Finding and adding kanji...", action: "disable#disableButton", disable_target: "button" } %>
       </div>
     <% end %>
   </div>
