--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -62,6 +62,59 @@
 }
 
 .next-kanji-page {
+  .settings {
+    display: flex;
+    flex-direction: row-reverse;
+    position: relative;
+    margin-bottom: -46px;
+    .settings-dropdown {
+      .settings-icon {
+        @extend .light-gray;
+        padding: 12px;
+        &:hover {
+          cursor: pointer;
+          padding-left: 80px;
+        }
+      }
+      .settings-dropdown-content {
+        display: none;
+        position: absolute;
+        border-color: #e5e7eb;
+        border-width: 1px;
+        border-style: solid;
+        background-color: white;
+        box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        z-index: 1;
+        top: 35px;
+        right: 12px;
+        a {
+          padding: 8px 10px;
+          display: block;
+          @extend .link-blue;
+          text-decoration: none;
+          &:hover {
+            background-color: #f3f4f6;
+          }
+          span {
+            display: flex;
+            svg {
+              margin-top: -2px;
+            }
+          }
+        }
+        .disabled-link {
+          pointer-events: none;
+          cursor: not-allowed;
+          @extend .light-gray;
+        }
+      }
+
+      &:hover .settings-dropdown-content,
+      &:active .settings-dropdown-content {
+        display: block;
+      }
+    }
+  }
   .page-title {
     text-align: center;
   }
