--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -88,9 +88,9 @@
         top: 35px;
         right: 12px;
         a {
-          padding: 8px 10px;
+          padding: 8px 16px 8px 10px;
           display: block;
-          @extend .link-blue;
+          color: #1F2937;
           text-decoration: none;
           &:hover {
             background-color: #f3f4f6;
@@ -99,13 +99,12 @@
             display: flex;
             svg {
               margin-top: -2px;
+              margin-right: 4px;
             }
           }
         }
-        .disabled-link {
-          pointer-events: none;
-          cursor: not-allowed;
-          @extend .light-gray;
+        .delete-kanji {
+          @extend .alert-red;
         }
       }
 
@@ -242,8 +241,11 @@
         outline-color: #3B82F6;
       }
     }
-    input[type="submit"] {
-      margin-top: 10px;
+    .actions {
+      padding-top: 10px;
+      input, a {
+        display: inline;
+      }
     }
   }
 }
