--- a/app/views/kanji/finder.html.erb
+++ b/app/views/kanji/finder.html.erb
@@ -13,6 +13,7 @@
 
       <div class="actions">
         <%= submit_tag "Find and add kanji", class: "button-blue", data: { controller: "disable", disable_with_value: "Finding and adding kanji...", action: "disable#disableButton", disable_target: "button" } %>
+        <%= link_to "Back", :back, class: "basic-button back-button" %>
       </div>
     <% end %>
   </div>
