--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -7,23 +7,24 @@
     <div class="settings-dropdown">
       <%= heroicon "cog", variant: :outline, options: { class: "settings-icon" } %>
       <div class="settings-dropdown-content">
-        <%= link_to(
-          delete_kanji_path(@resource_owner, @next_kanji&.id || 0),
-          # class: @next_kanji&.id ? "" : "disabled-link",
-          method: :delete,
-          params: { kanji: { status: Kanji::NEW_STATUS } },
-          title: "Delete this kanji from your list",
-          data: {
-            turbo_method: :delete,
-            controller: "disable",
-            disable_with_value: "Deleting...",
-            action: "disable#disableButton",
-            disable_target: "button"
-          }) do %>
-          <span>
-            <%= heroicon "trash", variant: :outline %>
-            Delete
-          </span>
+        <% if @next_kanji&.id %>
+          <%= link_to(
+            delete_kanji_path(@resource_owner, @next_kanji.id),
+            method: :delete,
+            params: { kanji: { status: Kanji::NEW_STATUS } },
+            title: "Delete this kanji from your list",
+            data: {
+              turbo_method: :delete,
+              controller: "disable",
+              disable_with_value: "Deleting...",
+              action: "disable#disableButton",
+              disable_target: "button"
+            }) do %>
+            <span class="delete-kanji">
+              <%= heroicon "trash", variant: :outline %>
+              Delete
+            </span>
+          <% end %>
         <% end %>
         <%= link_to(finder_kanji_path(@resource_owner)) do %>
           <span>
