Add keyboard shortcuts to kanji-finder

--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -26,7 +26,7 @@
             </span>
           <% end %>
         <% end %>
-        <%= link_to(finder_kanji_path(@resource_owner)) do %>
+        <%= link_to(finder_kanji_path(@resource_owner), class: "kanji-finder-link") do %>
           <span>
             <%= heroicon "chip", variant: :outline %>
             Kanji finder tool
