kanji settings dropdown UX polish

--- a/app/views/kanji/next.html.erb
+++ b/app/views/kanji/next.html.erb
@@ -28,7 +28,7 @@
         <% end %>
         <%= link_to(finder_kanji_path(@resource_owner), class: "kanji-finder-link") do %>
           <span>
-            <%= heroicon "chip", variant: :outline %>
+            <%= heroicon "document-search", variant: :outline %>
             Kanji finder tool
           </span>
         <% end %>
