--- a/app/assets/stylesheets/jpstudy/kanji.scss
+++ b/app/assets/stylesheets/jpstudy/kanji.scss
@@ -84,11 +84,13 @@
         border-style: solid;
         background-color: white;
         box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+        border-radius: 6px;
         z-index: 1;
         top: 35px;
         right: 12px;
         a {
-          padding: 8px 16px 8px 10px;
+          font-size: 0.9em;
+          padding: 9px 16px 9px 10px;
           display: block;
           color: #1F2937;
           text-decoration: none;
