--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -103,7 +103,7 @@
       <p>
         To unlock full access to the site after your free trial, you can subscribe
         for $1.00 a month. Your payment information is processed and stored by
-        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank" rel="noopener noreferrer">Square</a>
+        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank" rel="noopener noreferrer" class="link-blue">Square</a>
         and is not accessed by this site. You may cancel your subscription at any time.
       </p>
 
