--- a/app/views/kanji/finder.html.erb
+++ b/app/views/kanji/finder.html.erb
@@ -8,7 +8,7 @@
 
     <%= form_tag(bulk_create_kanji_path(@resource_owner)) do |form| %>
       <div class="field">
-        <%= text_area_tag :text, nil, required: true, rows: 6, minlength: 1, maxlength: 2000 %>
+        <%= text_area_tag :text, nil, autofocus: true, required: true, rows: 6, minlength: 1, maxlength: 2000 %>
       </div>
 
       <div class="actions">
