--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -77,6 +77,7 @@ nav {
     left: 50%;
     transform: translate(-50%, -50%);
     width: fit-content;
+    display: flex;
   }
   .right-links {
     float: right;
